name: Mantle
version: 0.0.1
cabal-version: >= 1.10
build-type: Simple

library
    default-language: Haskell2010
    build-depends: base >= 4 && < 5, vector >= 0.9.1, mtl, lens, containers, text, wl-pprint-text
    exposed-modules: Mantle.RTL, Mantle.Logic, Mantle.Circuit, Mantle.Synchronous, Mantle.Interface, Mantle.Prelude, Mantle.Verilog, Mantle.Examples.Counter, Mantle.Examples.Channels
    other-extensions: Rank2Types, TypeFamilies, FlexibleInstances, TypeSynonymInstances, ViewPatterns
