name: Mantle
version: 0.0.1
cabal-version: >= 1.10
build-type: Simple

library
    default-language: Haskell2010
    build-depends:
        base >= 4 && < 5,
        vector >= 0.9.1,
        fixed-vector,
        mtl,
        lens,
        containers,
        text,
        wl-pprint-text
    exposed-modules:
        Mantle.RTL,
        Mantle.Logic,
        Mantle.Circuit,
        Mantle.Synchronous,
        Mantle.Interface,
        Mantle.Prelude,
        Mantle.Verilog,
        Mantle.Vector,
        Mantle.Vector.Lits,
        Mantle.Bits,
        Mantle.Examples.Counter,
        Mantle.Examples.Channels,
        Mantle.Examples.FIFO,
        Mantle.Examples.TPad
    other-extensions:
        Rank2Types,
        TypeFamilies,
        FlexibleInstances,
        TypeSynonymInstances,
        ViewPatterns
